fix input error spacing, add util classes (#881)
This PR adds margin and padding utility classes for design-system spacing increments that we create for org site. (later this should probably move to component library)
Spectre had some of these too, so I commented those out (until we can finally move away from all spectre stuff) and updated any references to them to use our new ones instead.
Then I used the new spacing classes to fix the input error spacing for email/password/user-type.
And finally I moved the "forgot password?" link from the password component to login to match the updated placement in figma.

--- a/client/src/styles/EmailInput.scss
+++ b/client/src/styles/EmailInput.scss
@@ -17,7 +17,6 @@
       color: $justfix-black;
 
       text-align: left;
-      margin-bottom: 0.3125rem;
     }
 
     a {
@@ -48,13 +47,12 @@
 
     span {
       display: flex;
-      align-items: center;
       font-size: 0.8125rem;
       color: #ba4300;
-      margin-bottom: 0.3125rem;
 
       svg {
-        margin-right: 0.47rem;
+        height: 0.875rem;
+        width: 0.875rem;
       }
     }
   }
