--- a/client/src/styles/Login.scss
+++ b/client/src/styles/Login.scss
@@ -33,6 +33,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 1.5rem;
 
     .privacy-links {
@@ -41,14 +42,16 @@
       margin: 0 auto;
     }
 
-    .login-type-toggle {
+    .login-type-toggle,
+    .forgot-password {
       display: flex;
       justify-content: center;
       font-size: 0.94rem;
     }
 
     .privacy-links,
-    .login-type-toggle {
+    .login-type-toggle,
+    .forgot-password {
       a,
       button {
         color: inherit;
